kubernetes/apps/kube-system/cilium/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  annotations:
    gatus.home-operations.com/enabled: "false"
spec:
  hostnames: ["hubble.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
