kubernetes/apps/kube-system/cilium/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/networking.k8s.io/networkpolicy_v1.json
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hubble-ui
spec:
  podSelector:
    matchLabels:
      k8s-app: hubble-ui
  policyTypes:
    - Ingress
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              k8s-app: hubble-relay
      ports:
        - port: 4245
          protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: hubble-ui-api
spec:
  endpointSelector:
    matchLabels:
      k8s-app: hubble-ui
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchName: hubble-relay.kube-system.svc.cluster.local
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchName: hubble-relay.kube-system.svc.cluster.local
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/networking.k8s.io/networkpolicy_v1.json
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hubble-relay
spec:
  podSelector:
    matchLabels:
      k8s-app: hubble-relay
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              k8s-app: hubble-ui
      ports:
        - port: 4245
          protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: hubble-relay-peers
spec:
  endpointSelector:
    matchLabels:
      k8s-app: hubble-relay
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchName: hubble-peer.kube-system.svc.cluster.local
              - matchName: _grpc_config.hubble-peer.kube-system.svc.cluster.local
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchName: hubble-peer.kube-system.svc.cluster.local
              - matchName: _grpc_config.hubble-peer.kube-system.svc.cluster.local
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "4244"
              protocol: TCP
    - toEntities:
        - remote-node
      toPorts:
        - ports:
            - port: "4244"
              protocol: TCP
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "4244"
              protocol: TCP
